Stylistic changes. Updated UI

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .gradient-button {
-    margin-left: 6px;
+    margin-left: 3px;
     padding: 10px;
-    margin-top: 10px;
+    margin-top: 12px;
     text-align: center;
     text-transform: uppercase;
     transition: 0.5s;
@@ -30,7 +30,7 @@
     border-color: rgba(0, 0, 0, 0.267);
     border-radius: 5px;
     width: 138px;
-    height: 100px;
+    height: 120px;
     margin-left: 10px;
     background-color: rgb(255, 255, 255);
     padding: 10px;
@@ -49,7 +49,7 @@
     width: 320px;
 }
 .s-searchbox{
-    margin-top: 11px;
+    margin-top: 13px;
     margin-right: 6px;
     opacity: 0;
     transition: 0.5s;
@@ -76,4 +76,8 @@ img {
     opacity: 1;
     transition-delay: 0.8s;
     width: 170px;
+}
+small {
+    color: rgba(109, 109, 109, 0.637);
+    font-size: xx-small;
 }
